--- a/src/integrationTest/resources/test-settings.properties
+++ b/src/integrationTest/resources/test-settings.properties
@@ -1,7 +1,8 @@
+#webdriver.type=chrome
 webdriver.type=firefox
 webdriver.path=./webdrivers/geckodriver-v0.21.0-macos
-#webdriver.path=./webdrivers/chromedriver-x64-linux-2.41
 #webdriver.path=./webdrivers/chromedriver-x64-macOS-2.41
+#webdriver.path=./webdrivers/chromedriver-x64-linux-2.41
 #webdriver.path=./webdrivers/chromedriver-x64-windows-2.41.exe
 #webdriver.path=./webdrivers/geckodriver-v0.21.0-linux32
 #webdriver.path=./webdrivers/geckodriver-v0.21.0-linux64
