--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ dependencies {
 }
 
 dependencies {
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.13.0'
-    integrationTestCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.13.0'
-    integrationTestCompile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '3.13.0'
+    compile ('org.seleniumhq.selenium:selenium-java:3.13.0')
+    integrationTestCompile ('org.seleniumhq.selenium:selenium-java:3.13.0')
+    integrationTestCompile ('org.seleniumhq.selenium:selenium-server:3.13.0');
+    integrationTestCompile('org.assertj:assertj-core:3.10.0')
 }
 
 check.dependsOn integrationTest
